--- a/package.json
+++ b/package.json
@@ -13,22 +13,16 @@
   ],
   "author": "Fiverr",
   "license": "Unlicense",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "esbuild src/index.ts --outfile=index.js --format=esm  --bundle",
     "format": "prettier -w .",
-    "lint": "prettier -c .",
-    "pretest": "npm run build",
-    "publish": "wrangler publish",
-    "start": "wrangler dev src/index.ts",
-    "test": "node --test tests/index.js",
-    "wrangler": "wrangler"
+    "deploy": "npx wrangler deploy",
+    "start": "npx wrangler dev src/index.ts",
+    "test": "node --test --experimental-strip-types tests/index.ts"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.11.0",
-    "esbuild": "^0.14.43",
-    "prettier": "^2.7.0",
-    "wrangler": "^2.0.12"
+    "@cloudflare/workers-types": "^4.20250321.0",
+    "prettier": "^3.5.3",
+    "wrangler": "^4.5.0"
   }
 }
