--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "lib": ["ES2020"],
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "nodenext",
+    "allowImportingTsExtensions": true,
+    "lib": ["esnext"],
     "types": ["@cloudflare/workers-types"]
-  }
+  },
+  "include": ["src", "tests"],
+  "exclude": ["node_modules"]
 }
