--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,4 @@
 name = "health-check-to-splunk-on-call"
-compatibility_date = "2022-05-02"
+compatibility_date = "2024-11-11"
+compatibility_flags = ["nodejs_compat"]
 main = "./src/index.ts"
